<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 XperiaLabs Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="true">Additional Devices</string>
    <string name="app_summary" translatable="false">Configure additional device settings</string>

    <!-- USB Section | External Monitor -->
    <string name="usb_title">USB</string>
    <string name="usb_em_title">External Monitor</string>
    <string name="usb_em_summary">Enable the External Monitor app to customize external camera settings and utilize your Xperia\'s display as a reliable and accurate viewfinder for capturing vibrant, true-to-life colors</string>

    <!-- USB Audio Output -->
    <string name="usba_settings_title">External Audio Output</string>
    <string name="usba_settings_summary">Adjust media, in-call or the microphone\'s audio volume when outputting sound to an external device via the USB port</string>

    <!-- DSM (DualShock/Sense Manager) -->
    <string name="gaming_title">Gaming</string>
    <string name="dsm_settings_title">Wireless Controller for PS5 and PS4</string>
    <string name="dsm_settings_summary">Connect your PlayStation© controllers to your Xperia device to utilize them for gaming</string>
</resources>
